Create CordelSummary for get cordels endpoint
